--- a/menu2.html
+++ b/menu2.html
@@ -78,9 +78,9 @@
     <a href="timetable.html" class="bg-white text-xs font-bold py-2 px-4 rounded-lg shadow hover:bg-gray-100 text-left">
       ตารางเรียน/ตารางสอบ<br />- นักศึกษา<br />- อาจารย์
     </a>
-    <button class="bg-white text-xs font-bold py-2 px-4 rounded-lg shadow hover:bg-gray-100 text-left">
+    <a href="GPA.html" class="bg-white text-xs font-bold py-2 px-4 rounded-lg shadow hover:bg-gray-100 text-left">
       ผลการเรียน
-    </button>
+    </a>
     <a href="date2.html" class="bg-white text-xs font-bold py-2 px-4 rounded-lg shadow hover:bg-gray-100 text-left">
       ปฏิทินการศึกษา
     </a>
