--- a/GPA.html
+++ b/GPA.html
@@ -19,7 +19,7 @@
     </div>
     <div class="text-right text-xs text-gray-600 space-x-2">
       <span>EN | TH</span>
-      <button class="text-gray-600 text-xs cursor-pointer">เข้าสู่ระบบ</button>
+      <a href="login.html" class="bg-red-100 border border-red-600 text-red-800 px-2 py-1 rounded text-xs mb-1">ออกจากระบบ</a>
     </div>
   </header>
 
