--- a/menu2.html
+++ b/menu2.html
@@ -76,7 +76,7 @@
       วิชาที่เปิดสอน
     </a>
     <a href="timetable.html" class="bg-white text-xs font-bold py-2 px-4 rounded-lg shadow hover:bg-gray-100 text-left">
-      ตารางเรียน/ตารางสอบ<br />- นักศึกษา<br />- อาจารย์
+      ตารางเรียน/ตารางสอบ<br />- นักศึกษา
     </a>
     <a href="GPA.html" class="bg-white text-xs font-bold py-2 px-4 rounded-lg shadow hover:bg-gray-100 text-left">
       ผลการเรียน
