--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       </section>
 
       <!-- Footer Contact Box -->
-      <footer class="fixed bottom-0 right-0 bg-gray-200 p-4 w-72 shadow-lg z-50 text-left leading-relaxed sm:relative sm:w-full sm:shadow-none sm:mt-6">
+      <footer class=" bottom-0 right-0 bg-gray-200 p-4 w-72 shadow-lg z-50 text-left leading-relaxed sm:relative sm:w-full sm:shadow-none sm:mt-6">
         <h3 class="font-bold mb-2">ติดต่อมหาวิทยาลัยแม่โจ้</h3>
         <p class="text-sm">
           เลขที่ 63 หมู่ 4 ต.หนองหาร<br />
