--- a/date2.html
+++ b/date2.html
@@ -20,7 +20,7 @@
       </div>
       <div class="top-right">
         <a href="#" class="lang">EN | TH</a>
-        <button class="login-btn">รหัสนักศึกษาของคุณ</button>
+        <a href="index.html" class="login-btn">ออกจากระบบ</a>
         <div class="menu-icon">&#9776;</div>
       </div>
     </header>
