--- a/subject2.html
+++ b/subject2.html
@@ -21,7 +21,7 @@
         </div>
         <div class="flex flex-col items-end text-xs">
           <a href="#" class="text-gray-700 mb-1">EN | TH</a>
-          <a href="login.html" class="bg-red-100 border border-red-600 text-red-800 px-2 py-1 rounded text-xs mb-1">ออกจากระบบ</a>
+          <a href="index.html" class="bg-red-100 border border-red-600 text-red-800 px-2 py-1 rounded text-xs mb-1">ออกจากระบบ</a>
           <div class="text-lg cursor-pointer">&#9776;</div>
         </div>
       </header>
