--- a/timetable.html
+++ b/timetable.html
@@ -23,7 +23,7 @@
       </div>
       <div class="flex flex-col items-end space-y-1 mt-2 sm:mt-0">
         <a href="#" class="text-gray-700 text-sm">EN | TH</a>
-       <a href="login.html" class="bg-red-100 border border-red-600 text-red-800 text-sm px-2 py-1 rounded"> ออกจากระบบ</a>
+       <a href="index.html" class="bg-red-100 border border-red-600 text-red-800 text-sm px-2 py-1 rounded"> ออกจากระบบ</a>
         <span class="text-2xl cursor-pointer">&#9776;</span>
       </div>
     </header>
