--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       ตารางเรียน/ตารางสอบ<br />- นักศึกษา
     </a>
     <a href="login.html" class="bg-white text-xs font-bold py-2 px-4 rounded-lg shadow hover:bg-gray-100 text-left">
-      ผลการเรียน
+      บันทึกเกรดรายบุคคล
     </a>
     <a href="date1.html" class="bg-white text-xs font-bold py-2 px-4 rounded-lg shadow hover:bg-gray-100 text-left">
       ปฏิทินการศึกษา
